--- a/packages/-ember-data/package.json
+++ b/packages/-ember-data/package.json
@@ -41,6 +41,7 @@
     "@ember-data/serializer": "^0.0.0",
     "@ember-data/store": "^0.0.0",
     "@ember/ordered-set": "^2.0.3",
+    "@ember/string": "^1.0.0",
     "@glimmer/env": "^0.1.7",
     "babel-plugin-feature-flags": "^0.3.1",
     "babel-plugin-filter-imports": "^2.0.4",
@@ -52,7 +53,7 @@
     "broccoli-rollup": "^2.1.1",
     "calculate-cache-key-for-tree": "^1.1.0",
     "chalk": "^2.4.1",
-    "ember-cli-babel": "^7.1.4",
+    "ember-cli-babel": "^7.4.1",
     "ember-cli-path-utils": "^1.0.0",
     "ember-cli-string-utils": "^1.1.0",
     "ember-cli-test-info": "^1.0.0",
