--- a/packages/adapter/package.json
+++ b/packages/adapter/package.json
@@ -20,7 +20,8 @@
     "test:all": "ember try:each"
   },
   "dependencies": {
-    "ember-cli-babel": "^7.1.4"
+    "@ember/string": "^1.0.0",
+    "ember-cli-babel": "^7.4.1"
   },
   "devDependencies": {
     "@ember/optional-features": "^0.6.3",
