--- a/packages/serializer/package.json
+++ b/packages/serializer/package.json
@@ -22,7 +22,8 @@
   },
   "dependencies": {
     "@ember-data/store": "^0.0.0",
-    "ember-cli-babel": "^7.1.2"
+    "@ember/string": "^1.0.0",
+    "ember-cli-babel": "^7.4.1"
   },
   "devDependencies": {
     "@ember/optional-features": "^0.6.3",
