--- a/packages/store/package.json
+++ b/packages/store/package.json
@@ -24,8 +24,9 @@
   },
   "dependencies": {
     "@ember-data/adapter": "^0.0.0",
+    "@ember/string": "^1.0.0",
     "babel6-plugin-strip-heimdall": "^6.0.1",
-    "ember-cli-babel": "^7.1.2",
+    "ember-cli-babel": "^7.4.1",
     "ember-cli-path-utils": "^1.0.0",
     "ember-cli-string-utils": "^1.1.0",
     "ember-cli-typescript": "^2.0.0-rc.2",
